# arg_reform_inv

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
src/: __init__.py
src/app/: __init__.py  alerts.py  dashboard.py  main.py  watcher.py
src/config/: __init__.py  series_registry.py  settings.py
src/data/: __init__.py  db.py  init_db.py  provider_router.py  pull_cds.py  pull_common.py  pull_cpi.py  pull_embi_cds.py  pull_embi_resilient.py  pull_embi_synthetic.py  pull_fx.py  pull_ndf.py  pull_policy_rate.py  pull_reserves.py  refresh_all.py
src/data/bonds/: arg_usd_bonds.yaml
src/data/providers/: __init__.py  base.py  bcra.py  bcra_policy.py  bluelytics.py  eod_bonds-archived.py  eod_bonds.py  eod_gbond.py  eubond_csv.py  fred_cpi.py  imf.py  imf_cpi.py  indec.py  ndf_argentina.py  wgb_cds.py  yahoo_fx.py
src/features/: __init__.py  cpi_corridors.py  embi_bands.py  fx_gap.py  reserves_momentum.py
src/models/: __init__.py  bond_spread.py  embi_local.py  fx_reserve_identity.py  sharpe_engine.py  synthetic_usd_spread.py
src/quality/: embi_checks.py
src/tests/: __init__.py  test_fx_gap.py  test_fx_reserve_identity.py  test_gates.py  test_sharpe_engine.py
src/tests/providers/: test_bluelytics_provider.py  test_router_priority.py
src/triggers/: __init__.py  gates.py  refresh_data.py
