[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arg-reform-inv"
version = "0.1.0"
description = "Argentina Reform Investment Analysis"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "duckdb>=0.9.0",
    "python-dotenv>=1.0.0",
    "plotly>=5.17.0",
    "streamlit>=1.28.0",
    "pytest>=7.4.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "schedule>=1.2.0",
    "yfinance==0.2.44",
    "sdmx1>=2.22.0",
    "pyyaml>=6.0.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

